--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,9 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.hideScroll {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
